syntax = "proto3";

package log;

service LogService {
  rpc AppendMessage(MessageRequest) returns (MessageReply);
}

message MessageRequest {
  string id = 1;
  string text = 2;
}

message MessageReply {
  bool success = 1;
}